# icv_sunday_school_2019_spring

./: README.md
classification/: AndroidManifest.xml  MainActivity.java  activity_main.xml  render.py
edges2cats/: edges2cats.py
face_recognition/: CMakeLists.txt  README.md  main.cpp
